styles.css
* {
    margin: 0;
    padding: 0;
    font-family: 'Inter', sans-serif;
}

body {
    text-align: center;
    background-color: white;
}

.overlay {
    position: fixed;
    inset: 0;
    background: rgba(0, 0, 0, 0.4);
    display: none;
    align-items: center;
    justify-content: center;
    z-index: 10000;
}

.modal {
    width: 1200px;
    padding: 20px;
    border-radius: 10px;
    background: white;
    border: 1px solid #bcccd9;
}

#layout {
    display: flex;
    gap: 20px;
}

#layout p {
    font-size: 1.2em;
    font-weight: 300;
}

.modal h2 {
    font-weight: 400;
    font-size: 2em;
}

.modal hr {
    margin-block: 20px;
}

h1 {
    background-image: linear-gradient(to bottom, #4ed7f0, white);
    padding-block: 20px;
    color: black;
    font-weight: 300;
}

#aboutBtn {
    display: inline-block;
    font-weight: 200;
    padding: 10px;
    border: 1px solid #82919c;
    font-size: 1.5em;
    text-decoration: none;
    color: #053d6b;
}

#aboutBtn:hover {
    text-decoration: 1px dotted underline;
    text-underline-offset: 5px;
    cursor: pointer;
    transition: border 0.1s;
    border: 1px solid rgb(201, 201, 201);
}

h3 {
    display: inline-block;
    margin-top: 20px;
    margin-bottom: 10px;
    padding: 3px;
    background-color: #c3f8ff;
    color: black;
    border: 1px solid lightgray;
    border-radius: 5px;
    font-weight: 300;
}

.nav-row {
    display: flex;
    justify-content: center;
    gap: 7px;
    margin-bottom: 20px;
}

.nav-row a {
    text-decoration: none;
    color: black;
    border: 1px solid #82919c;
    padding: 3px;
    border-radius: 2px;
    font-weight: 200;
}

.nav-row a:hover {
    border: 1px solid rgb(193, 193, 193);
}

#darkMode {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    pointer-events: none;
    z-index: 9999;

    background-color: black;

    mix-blend-mode: difference;
    transition: background-color 1s ease;
}

#darkModeLabel {
    font-weight: 300;
    color: gray;
}

/* Base switch code from https://www.w3schools.com/howto/howto_css_switch.asp */
.switch {
    position: relative;
    display: inline-block;
    width: 48px;
    height: 20px;
}

.switch input {
    opacity: 0;
    width: 0;
    height: 0;
}

.slider {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ccc;
    -webkit-transition: .4s;
    transition: .4s;
}

.slider:before {
    position: absolute;
    content: "";
    height: 13px;
    width: 13px;
    left: 4px;
    bottom: 4px;
    background-color: white;
    -webkit-transition: .4s;
    transition: .4s;
}

input:checked+.slider {
    background-color: #a1e9ff;
}

input:focus+.slider {
    box-shadow: 0 0 1px #2196F3;
}

input:checked+.slider:before {
    -webkit-transform: translateX(26px);
    -ms-transform: translateX(26px);
    transform: translateX(26px);
}

/* Rounded sliders */
.slider.round {
    border-radius: 34px;
}

.slider.round:before {
    border-radius: 50%;
}

